# gpt-shopping-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  supabase_status.py
app/: __init__.py  final_cleanup.py
app/core/: config.py  logger.py
app/data/: .gitkeep
app/lib/: gemini_utils.py
app/models/: __init__.py  schemas.py
app/routers/: analytics.py  citation_analytics.py  citations.py
app/services/: ai_analytics_service.py  analytics_service.py  citation_pipeline_service.py  citation_service.py
app/utils/: cache.py  db.py  logging_utils.py
