[project]
name = "gpt-shopping-backend"
version = "0.1.0"
description = "Backend API for GPT Shopping Analytics Dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.9.0",
    "postgrest>=0.17.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "tld",
    "textblob"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
